clean up import codes in welding tutorial notebooks

--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -33,31 +33,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# some python imports that will be used throughout the tutorial\n",
-    "import matplotlib.pyplot as plt\n",
-    "import networkx as nx\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pint\n",
-    "import xarray as xr\n",
-    "from mpl_toolkits.mplot3d import Axes3D"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# importing the weldx package with prevalent default abbreviations\n",
-    "import weldx\n",
-    "import weldx.geometry as geo\n",
-    "import weldx.transformations as tf\n",
-    "import weldx.util \n",
-    "import weldx.visualization as vis\n",
-    "from weldx import Q_\n",
-    "from weldx.transformations import LocalCoordinateSystem as lcs\n",
-    "from weldx.transformations import WXRotation"
+    "\n",
+    "from weldx import (\n",
+    "    Q_,\n",
+    "    CoordinateSystemManager,\n",
+    "    Geometry,\n",
+    "    LinearHorizontalTraceSegment,\n",
+    "    LocalCoordinateSystem,\n",
+    "    Trace,\n",
+    "    WXRotation,\n",
+    "    get_groove,\n",
+    "    WeldxFile,\n",
+    ")"
    ]
   },
   {
@@ -84,8 +73,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.welding.groove.iso_9692_1 import get_groove\n",
-    "\n",
     "groove = get_groove(\n",
     "    groove_type=\"VGroove\",\n",
     "    workpiece_thickness=Q_(5, \"mm\"),\n",
@@ -134,8 +121,8 @@
     "seam_length = Q_(300, \"mm\")\n",
     "\n",
     "# create a linear trace segment a the complete weld seam trace\n",
-    "trace_segment = geo.LinearHorizontalTraceSegment(seam_length)\n",
-    "trace = geo.Trace(trace_segment)"
+    "trace_segment = LinearHorizontalTraceSegment(seam_length)\n",
+    "trace = Trace(trace_segment)"
    ]
   },
   {
@@ -152,7 +139,7 @@
    "outputs": [],
    "source": [
     "# create 3d workpiece geometry from the groove profile and trace objects\n",
-    "geometry = geo.Geometry(groove.to_profile(width_default=Q_(5, \"mm\")), trace)"
+    "geometry = Geometry(groove.to_profile(width_default=Q_(5, \"mm\")), trace)"
    ]
   },
   {
@@ -241,7 +228,7 @@
    "outputs": [],
    "source": [
     "# crete a new coordinate system manager with default base coordinate system\n",
-    "csm = weldx.transformations.CoordinateSystemManager(\"base\")"
+    "csm = CoordinateSystemManager(\"base\")"
    ]
   },
   {
@@ -372,7 +359,9 @@
    "source": [
     "coords = [tcp_start_point.magnitude, tcp_end_point.magnitude]\n",
     "\n",
-    "tcp_wire = lcs(coordinates=coords, orientation=rot, time=[t_start, t_end])"
+    "tcp_wire = LocalCoordinateSystem(\n",
+    "    coordinates=coords, orientation=rot, time=[t_start, t_end]\n",
+    ")"
    ]
   },
   {
@@ -409,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tcp_contact = lcs(coordinates=[0, 0, -10])"
+    "tcp_contact = LocalCoordinateSystem(coordinates=[0, 0, -10])"
    ]
   },
   {
@@ -480,9 +469,9 @@
    "outputs": [],
    "source": [
     "# add the workpiece coordinate system\n",
-    "csm.add_cs(\"T1\", \"workpiece\", lcs(coordinates=[200, 3, 5]))\n",
-    "csm.add_cs(\"T2\", \"T1\", lcs(coordinates=[0, 1, 0]))\n",
-    "csm.add_cs(\"T3\", \"T2\", lcs(coordinates=[0, 1, 0]))"
+    "csm.add_cs(\"T1\", \"workpiece\", LocalCoordinateSystem(coordinates=[200, 3, 5]))\n",
+    "csm.add_cs(\"T2\", \"T1\", LocalCoordinateSystem(coordinates=[0, 1, 0]))\n",
+    "csm.add_cs(\"T3\", \"T2\", LocalCoordinateSystem(coordinates=[0, 1, 0]))"
    ]
   },
   {
@@ -563,7 +552,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = weldx.WeldxFile(tree=tree)"
+    "file = WeldxFile(tree=tree)"
    ]
   },
   {
@@ -574,6 +563,13 @@
    "source": [
     "file.show_asdf_header()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
