--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -33,32 +33,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# some python imports that will be used throughout the tutorial\n",
-    "import matplotlib.pyplot as plt\n",
-    "import networkx as nx\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pint\n",
-    "import xarray as xr\n",
-    "from mpl_toolkits.mplot3d import Axes3D"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# importing the weldx package with prevalent default abbreviations\n",
-    "import weldx\n",
-    "import weldx.geometry as geo\n",
-    "import weldx.transformations as tf\n",
-    "from weldx import util\n",
-    "import weldx.visualization as vis\n",
-    "from weldx import Q_\n",
-    "from weldx.core import MathematicalExpression, TimeSeries\n",
-    "from weldx.transformations import LocalCoordinateSystem as lcs\n",
-    "from weldx.transformations import WXRotation"
+    "\n",
+    "from weldx import (\n",
+    "    Q_,\n",
+    "    Geometry,\n",
+    "    LocalCoordinateSystem,\n",
+    "    CoordinateSystemManager,\n",
+    "    TimeSeries,\n",
+    "    Trace,\n",
+    "    WXRotation,\n",
+    "    get_groove,\n",
+    "    util,\n",
+    "    LinearHorizontalTraceSegment,\n",
+    ")"
    ]
   },
   {
@@ -82,8 +71,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.welding.groove.iso_9692_1 import get_groove\n",
-    "\n",
     "groove = get_groove(\n",
     "    groove_type=\"VGroove\",\n",
     "    workpiece_thickness=Q_(0.5, \"cm\"),\n",
@@ -110,11 +97,11 @@
     "seam_length = 150\n",
     "\n",
     "# create a linear trace segment a the complete weld seam trace\n",
-    "trace_segment = geo.LinearHorizontalTraceSegment(seam_length)\n",
-    "trace = geo.Trace(trace_segment)\n",
+    "trace_segment = LinearHorizontalTraceSegment(seam_length)\n",
+    "trace = Trace(trace_segment)\n",
     "\n",
     "# create 3d workpiece geometry from the groove profile and trace objects\n",
-    "geometry = geo.Geometry(groove.to_profile(width_default=Q_(5, \"mm\")), trace)\n",
+    "geometry = Geometry(groove.to_profile(width_default=Q_(5, \"mm\")), trace)\n",
     "\n",
     "# rasterize geometry\n",
     "profile_raster_width = 2  # resolution of each profile in mm\n",
@@ -138,7 +125,7 @@
    "outputs": [],
    "source": [
     "# crete a new coordinate system manager with default base coordinate system\n",
-    "csm = weldx.transformations.CoordinateSystemManager(\"base\")\n",
+    "csm = CoordinateSystemManager(\"base\")\n",
     "\n",
     "# add the workpiece coordinate system\n",
     "csm.add_cs(\n",
@@ -183,7 +170,7 @@
     "\n",
     "coords = [tcp_start_point.magnitude, tcp_end_point.magnitude]\n",
     "\n",
-    "tcp_wire = lcs(coordinates=coords, orientation=rot, time=[t_start, t_end])"
+    "tcp_wire = LocalCoordinateSystem(coordinates=coords, orientation=rot, time=[t_start, t_end])"
    ]
   },
   {
@@ -294,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tcp_sine = lcs(coordinates=ts_sine_data)"
+    "tcp_sine = LocalCoordinateSystem(coordinates=ts_sine_data)"
    ]
   },
   {
@@ -499,7 +486,7 @@
     "\n",
     "t = pd.timedelta_range(start=\"0s\", end=\"8s\", freq=\"25ms\")\n",
     "ts_sine_data = util.lcs_coords_from_ts(ts_sine, t)\n",
-    "tcp_sine2 = lcs(coordinates=ts_sine_data)"
+    "tcp_sine2 = LocalCoordinateSystem(coordinates=ts_sine_data)"
    ]
   },
   {
@@ -629,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
