allow str quantities for MathExpr

--- a/tutorials/timeseries_01.ipynb
+++ b/tutorials/timeseries_01.ipynb
@@ -16,20 +16,9 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pint\n",
-    "import xarray as xr\n",
-    "import sympy\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "import weldx\n",
-    "import weldx.transformations as tf\n",
-    "import weldx.util \n",
-    "\n",
-    "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension\n",
-    "from weldx.asdf.tags.weldx.core.mathematical_expression import MathematicalExpression\n",
-    "from weldx.core import TimeSeries\n",
-    "from weldx import Q_\n",
-    "from weldx.constants import WELDX_UNIT_REGISTRY as UREG"
+    "from weldx import Q_, MathematicalExpression, TimeSeries, util"
    ]
   },
   {
@@ -40,9 +29,9 @@
    "source": [
     "def plot_ts(ts):\n",
     "    ts = ts.data_array\n",
-    "    fig, ax = plt.subplots(1,1)\n",
-    "    x = ts.time.data.astype('timedelta64[ms]').astype(int)/1000.0\n",
-    "    plt.plot(x,ts.data.magnitude,'-o')\n",
+    "    fig, ax = plt.subplots(1, 1)\n",
+    "    x = ts.time.data.astype(\"timedelta64[ms]\").astype(int) / 1000.0\n",
+    "    plt.plot(x, ts.data.magnitude, \"-o\")\n",
     "    plt.xlabel(\"time / s\")\n",
     "    plt.ylabel(f\"value / {ts.data.units}\");"
    ]
@@ -89,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_constant = TimeSeries(Q_(5,\"Hz\"))\n",
+    "ts_constant = TimeSeries(Q_(5, \"Hz\"))\n",
     "print(ts_constant)"
    ]
   },
@@ -106,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = pd.timedelta_range(start=\"0s\",end=\"10s\",freq=\"s\")\n",
+    "t = pd.timedelta_range(start=\"0s\", end=\"10s\", freq=\"s\")\n",
     "t"
    ]
   },
@@ -162,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_constant_vector = TimeSeries(Q_([[0,2,10]],\"cm\"))\n",
+    "ts_constant_vector = TimeSeries(Q_([[0, 2, 10]], \"cm\"))\n",
     "print(ts_constant_vector)"
    ]
   },
@@ -199,7 +188,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_step = TimeSeries(data=Q_([10,15,8],\"cm/min\"),time=pd.TimedeltaIndex(data=[0,2,6],unit=\"s\"),interpolation=\"step\")\n",
+    "ts_step = TimeSeries(\n",
+    "    data=Q_([10, 15, 8], \"cm/min\"),\n",
+    "    time=pd.TimedeltaIndex(data=[0, 2, 6], unit=\"s\"),\n",
+    "    interpolation=\"step\",\n",
+    ")\n",
     "ts_step"
    ]
   },
@@ -234,7 +227,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_linear = TimeSeries(data=Q_([100,200],\"A\"),time=pd.TimedeltaIndex(data=[3,7],unit=\"s\"),interpolation=\"linear\")\n",
+    "ts_linear = TimeSeries(\n",
+    "    data=Q_([100, 200], \"A\"),\n",
+    "    time=pd.TimedeltaIndex(data=[3, 7], unit=\"s\"),\n",
+    "    interpolation=\"linear\",\n",
+    ")\n",
     "ts_linear"
    ]
   },
@@ -263,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts = ts_linear.interp_time(t+pd.Timedelta(0.5,\"s\"))\n",
+    "ts = ts_linear.interp_time(t + pd.Timedelta(0.5, \"s\"))\n",
     "print(ts)\n",
     "plot_ts(ts)"
    ]
@@ -288,7 +285,7 @@
    "outputs": [],
    "source": [
     "expr_string = \"a*t+b\"\n",
-    "parameters = {\"a\": Q_(120, \"m/min\"), \"b\": Q_(-10, \"m\")}\n",
+    "parameters = {\"a\": Q_(\"120 m/min\"), \"b\": Q_(\"-10 m\")}\n",
     "expr = MathematicalExpression(expression=expr_string, parameters=parameters)\n",
     "\n",
     "ts_expr = TimeSeries(data=expr)\n",
@@ -311,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t2 = Q_(np.arange(101)*100,\"ms\")\n",
+    "t2 = Q_(np.arange(101) * 100, \"ms\")\n",
     "ts = ts_expr.interp_time(t2)\n",
     "plot_ts(ts)"
    ]
@@ -331,12 +328,12 @@
    "outputs": [],
    "source": [
     "expr_string = \"a*sin(o*t)+b\"\n",
-    "parameters = {\"a\": Q_(1, \"m\"), \"b\": Q_(1, \"m\"),\"o\":Q_(36,\"deg/s\")}\n",
+    "parameters = {\"a\": Q_(\"1 m\"), \"b\": Q_(\"1 m\"), \"o\": Q_(\"36 deg/s\")}\n",
     "expr = MathematicalExpression(expression=expr_string, parameters=parameters)\n",
     "\n",
     "ts_sine = TimeSeries(data=expr)\n",
     "\n",
-    "ts = ts_sine.interp_time(pd.timedelta_range(start=\"0s\",end=\"10s\",freq=\"100ms\"))\n",
+    "ts = ts_sine.interp_time(pd.timedelta_range(start=\"0s\", end=\"10s\", freq=\"100ms\"))\n",
     "plot_ts(ts)"
    ]
   },
@@ -356,12 +353,15 @@
    "source": [
     "expr_string = \"a*sin(o*t)+b*t\"\n",
     "parameters = {\n",
-    "    \"a\": Q_(np.asarray([[1, 0, 0]]), \"m\"), \"b\": Q_([[0, 1, 0]], \"m/s\"),\"o\":Q_(36,\"deg/s\")}\n",
+    "    \"a\": Q_(np.asarray([[1, 0, 0]]), \"m\"),\n",
+    "    \"b\": Q_([[0, 1, 0]], \"m/s\"),\n",
+    "    \"o\": Q_(\"36 deg/s\"),\n",
+    "}\n",
     "expr = MathematicalExpression(expression=expr_string, parameters=parameters)\n",
     "\n",
     "ts_vector = TimeSeries(data=expr)\n",
     "\n",
-    "ts = ts_vector.interp_time(pd.timedelta_range(start=\"0s\",end=\"10s\",freq=\"500ms\"))\n",
+    "ts = ts_vector.interp_time(pd.timedelta_range(start=\"0s\", end=\"10s\", freq=\"500ms\"))\n",
     "print(ts)"
    ]
   },
@@ -398,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
