--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -255,23 +255,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the `weldx.utility.lcs_coords_from_ts` function to create the translation coordinate vectors at our specified timestamps."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = pd.timedelta_range(start=t_start, end=t_end, freq=\"10ms\")\n",
-    "ts_sine_data = util.lcs_coords_from_ts(ts_sine, t)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "We now define a simple coordinate system that contains only the weaving motion."
    ]
   },
@@ -281,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tcp_sine = LocalCoordinateSystem(coordinates=ts_sine_data)"
+    "tcp_sine = LocalCoordinateSystem(coordinates=ts_sine)"
    ]
   },
   {
@@ -299,7 +282,15 @@
    "source": [
     "csm.add_cs(\n",
     "    coordinate_system_name=\"tcp_sine\", reference_system_name=\"tcp_wire\", lcs=tcp_sine\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "csm"
    ]
   },
@@ -316,6 +307,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "t = pd.timedelta_range(start=t_start, end=t_end, freq=\"10ms\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ax = csm.plot(\n",
     "    coordinate_systems=[\"tcp_wire\", \"tcp_sine\"],\n",
     "    colors=color_dict,\n",
@@ -323,6 +323,7 @@
     "    show_origins=False,\n",
     "    show_vectors=False,\n",
     "    show_wireframe=True,\n",
+    "    time = t,\n",
     ")\n",
     "ax_setup(ax)"
    ]
@@ -347,6 +348,7 @@
     "    show_origins=False,\n",
     "    show_vectors=False,\n",
     "    show_wireframe=False,\n",
+    "    time = t,\n",
     ")\n",
     "ax_setup(ax)"
    ]
@@ -482,8 +484,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_sine = util.sine(f=Q_(1 / 8 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0, 1]], \"mm\"))\n",
-    "\n",
+    "ts_sine = util.sine(f=Q_(1 / 8 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0, 1]], \"mm\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the `lcs_coords_from_ts` function to create the translation coordinate vectors at our specified timestamps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "t = pd.timedelta_range(start=\"0s\", end=\"8s\", freq=\"25ms\")\n",
     "ts_sine_data = util.lcs_coords_from_ts(ts_sine, t)\n",
     "tcp_sine2 = LocalCoordinateSystem(coordinates=ts_sine_data)"
