Fix notebook issue

--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -366,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tcp_wire_sine = tcp_sine + tcp_wire"
+    "tcp_wire_sine = tcp_sine.interp_time(t) + tcp_wire"
    ]
   },
   {
@@ -632,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
