--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -27,13 +27,13 @@
    },
    "outputs": [],
    "source": [
-    "import asdf\n",
     "import fs\n",
     "import yaml\n",
     "\n",
+    "import asdf\n",
     "from weldx import WeldxFile\n",
     "from weldx.config import QualityStandard\n",
-    "from weldx.measurement import  MeasurementEquipment"
+    "from weldx.measurement import MeasurementEquipment"
    ]
   },
   {
@@ -116,13 +116,15 @@
    },
    "outputs": [],
    "source": [
-    "mem_fs = fs.open_fs('mem://')\n",
+    "mem_fs = fs.open_fs(\"mem://\")\n",
     "mem_fs.makedirs(\"resources/my_organization/manifests\")\n",
     "mem_fs.makedirs(\"resources/my_organization/schemas\")\n",
     "mem_fs.listdir(\"\")\n",
     "\n",
     "mem_fs.create(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\")\n",
-    "mem_fs.create(\"resources/my_organization/schemas/my_measurement_equipment_schema-1.0.0.yaml\")\n",
+    "mem_fs.create(\n",
+    "    \"resources/my_organization/schemas/my_measurement_equipment_schema-1.0.0.yaml\"\n",
+    ")\n",
     "mem_fs.tree()"
    ]
   },
@@ -303,7 +305,9 @@
    "outputs": [],
    "source": [
     "# write to the file\n",
-    "with mem_fs.open(\"resources/my_organization/schemas/my_measurement_equipment_schema-1.0.0.yaml\", \"w\") as file:\n",
+    "with mem_fs.open(\n",
+    "    \"resources/my_organization/schemas/my_measurement_equipment_schema-1.0.0.yaml\", \"w\"\n",
+    ") as file:\n",
     "    file.write(schema_file)"
    ]
   },
@@ -365,7 +369,9 @@
    "outputs": [],
    "source": [
     "# write to the file\n",
-    "with mem_fs.open(\"resources/my_organization/manifests/my_standard-1.0.0.yaml\", \"w\") as file:\n",
+    "with mem_fs.open(\n",
+    "    \"resources/my_organization/manifests/my_standard-1.0.0.yaml\", \"w\"\n",
+    ") as file:\n",
     "    file.write(manifest_file)"
    ]
   },
@@ -449,6 +455,7 @@
    "outputs": [],
    "source": [
     "from weldx.config import add_quality_standard\n",
+    "\n",
     "add_quality_standard(qs)"
    ]
   },
@@ -481,6 +488,7 @@
    "outputs": [],
    "source": [
     "from weldx.config import enable_quality_standard\n",
+    "\n",
     "enable_quality_standard(\"my_standard\")"
    ]
   },
@@ -511,7 +519,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "   WeldxFile(tree={\"equipment\":my_equipment}, mode=\"rw\")\n",
+    "    WeldxFile(tree={\"equipment\": my_equipment}, mode=\"rw\")\n",
     "except asdf.ValidationError:\n",
     "    print(\"Ups..., got some lengthy validation error...\")"
    ]
@@ -547,7 +555,7 @@
     "my_equipment.wx_metadata = {\"serial_number\": \"not a number\"}\n",
     "\n",
     "try:\n",
-    "   WeldxFile(tree={\"equipment\":my_equipment}, mode=\"rw\")\n",
+    "    WeldxFile(tree={\"equipment\": my_equipment}, mode=\"rw\")\n",
     "except asdf.ValidationError:\n",
     "    print(\"Still getting a validation error...\")"
    ]
@@ -579,7 +587,7 @@
    "outputs": [],
    "source": [
     "my_equipment.wx_metadata = {\"serial_number\": 1234}\n",
-    "file = WeldxFile(tree={\"equipment\":my_equipment}, mode=\"rw\")"
+    "file = WeldxFile(tree={\"equipment\": my_equipment}, mode=\"rw\")"
    ]
   },
   {
@@ -641,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
