update markdown syntax

--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One approach to combine the weaving motion with the existing linear _tcp_wire_ movement is to use the coordinate system manager. We can add the _tcp_sine_ coordinate system relative to the _tcp_wire_ system:"
+    "One approach to combine the weaving motion with the existing linear `tcp_wire` movement is to use the coordinate system manager. We can add the `tcp_sine` coordinate system relative to the `tcp_wire` system:"
    ]
   },
   {
