--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -384,7 +384,7 @@
    },
    "source": [
     "The header section should be rather self explanatory.\n",
-    "Its id is the manifest file's filepath relative to the `resource` directory with a preceeding `http://`.\n",
+    "Its id is the manifest file's filepath relative to the `resource` directory with a preceding `http://`.\n",
     "The composition of the extension uri is quite similar except that `manifests` gets replaced by `standards`.\n",
     "\n",
     "The mapping section is a YAML list with the name `tags`.\n",
