enable string quantity syntax in get_groove and update tutorial

--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -31,14 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ASDF imports\n",
-    "import asdf\n",
-    "\n",
     "# Creating grooves\n",
-    "import weldx\n",
-    "from weldx import Q_ as Quantity  # pint quantity from the weldx package\n",
-    "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension\n",
-    "from weldx.welding.groove.iso_9692_1 import get_groove"
+    "from weldx import get_groove, WeldxFile"
    ]
   },
   {
@@ -58,21 +52,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Workpiece thickness (note the use of 'cm')\n",
-    "t = Quantity(1, \"cm\")\n",
-    "# groove angle\n",
-    "alpha = Quantity(55, \"deg\")\n",
-    "# root gap\n",
-    "b = Quantity(2, \"mm\")\n",
-    "# root face\n",
-    "c = Quantity(1, \"mm\")\n",
-    "\n",
     "v_groove = get_groove(\n",
     "    groove_type=\"VGroove\",\n",
-    "    workpiece_thickness=t,\n",
-    "    groove_angle=alpha,\n",
-    "    root_gap=b,\n",
-    "    root_face=c,\n",
+    "    workpiece_thickness=\"1 cm\", #(note the use of 'cm')\n",
+    "    groove_angle=\"55 deg\",\n",
+    "    root_gap=\"2 mm\",\n",
+    "    root_face=\"1 mm\",\n",
     ")\n",
     "\n",
     "display(v_groove)\n",
@@ -188,10 +173,8 @@
    "metadata": {},
    "source": [
     "## using ASDF\n",
+    "All groove types can be saved to *weldx*-files.\n",
     "\n",
-    "All groove types can be saved to _ASDF_-files with the included schemas and _ASDF_-extension from the weldx-package.\n",
-    "Note that these schemas and extensions are being handled automatically and you do not have\n",
-    "to worry about these.\n",
     "Here we demonstrate the writing of the groove data into a buffer (in-memory file):"
    ]
   },
@@ -202,7 +185,7 @@
    "outputs": [],
    "source": [
     "tree = dict(test_v_groove=v_groove)\n",
-    "file = weldx.WeldxFile(tree=tree)"
+    "file = WeldxFile(tree=tree)"
    ]
   },
   {
@@ -236,7 +219,7 @@
    "outputs": [],
    "source": [
     "file_copy = file.write_to()\n",
-    "data = weldx.WeldxFile(file_copy)\n",
+    "data = WeldxFile(file_copy)\n",
     "data[\"test_v_groove\"]"
    ]
   },
