formatting and wording

--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -20,9 +20,9 @@
     "* Converting a groove to a profile\n",
     "* Using `plot` on a profile constructed by a groove\n",
     "* All possible groove types as plot\n",
-    "* saving and loading grooves with ASDF\n",
+    "* Saving and load grooves to/from weldx files\n",
     "\n",
-    "First starting with the imports:"
+    "First starting with the imports needed for this tutorial:"
    ]
   },
   {
@@ -31,8 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating grooves\n",
-    "from weldx import get_groove, WeldxFile"
+    "from weldx import WeldxFile, get_groove"
    ]
   },
   {
@@ -54,7 +53,7 @@
    "source": [
     "v_groove = get_groove(\n",
     "    groove_type=\"VGroove\",\n",
-    "    workpiece_thickness=\"1 cm\", #(note the use of 'cm')\n",
+    "    workpiece_thickness=\"1 cm\",  # (note the use of 'cm')\n",
     "    groove_angle=\"55 deg\",\n",
     "    root_gap=\"2 mm\",\n",
     "    root_face=\"1 mm\",\n",
