--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -20,7 +20,7 @@
     "* Converting a groove to a profile\n",
     "* Using `plot` on a profile constructed by a groove\n",
     "* All possible groove types as plot\n",
-    "* Saving and load grooves to/from weldx files\n",
+    "* Saving and loading grooves to/from weldx files\n",
     "\n",
     "First starting with the imports needed for this tutorial:"
    ]
