Finish closed mesh generation

--- a/tutorials/closed_mesh.ipynb
+++ b/tutorials/closed_mesh.ipynb
@@ -33,10 +33,10 @@
    "source": [
     "groove = get_groove(\n",
     "    groove_type=\"VGroove\",\n",
-    "    workpiece_thickness=\"0.5 cm\",\n",
-    "    groove_angle=\"50 deg\",\n",
-    "    root_face=\"1 mm\",\n",
-    "    root_gap=\"1 mm\",\n",
+    "    workpiece_thickness=Q_(\"0.5 cm\"),\n",
+    "    groove_angle=Q_(\"50 deg\"),\n",
+    "    root_face=Q_(\"1 mm\"),\n",
+    "    root_gap=Q_(\"1 mm\"),\n",
     ")\n",
     "groove"
    ]
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fce8f69d47e14dae87b2d8fb388e5846",
+       "model_id": "b82bbc6c75214c45953a9861d92af8d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99293ee2ac414ebcb1d0d785ca5f1b6e",
+       "model_id": "090216ba7aca4459a50896d1af9268fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "<weldx.visualization.k3d_impl.CoordinateSystemManagerVisualizerK3D at 0x2428906a640>"
+       "<weldx.visualization.k3d_impl.CoordinateSystemManagerVisualizerK3D at 0x18f8f109670>"
       ]
      },
      "execution_count": 6,
