--- a/tutorials/timeseries_01.ipynb
+++ b/tutorials/timeseries_01.ipynb
@@ -22,21 +22,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_ts(ts):\n",
-    "    ts = ts.data_array\n",
-    "    fig, ax = plt.subplots(1, 1)\n",
-    "    x = ts.time.data.astype(\"timedelta64[ms]\").astype(int) / 1000.0\n",
-    "    plt.plot(x, ts.data.magnitude, \"-o\")\n",
-    "    plt.xlabel(\"time / s\")\n",
-    "    plt.ylabel(f\"value / {ts.data.units}\");"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -124,7 +109,7 @@
     "- a single named `time` dimension with the evaluated timestamps as coordinate values\n",
     "- the data consisting of our constant value as a `Quantity`\n",
     "\n",
-    "We can also create a simple plot:"
+    "We can also create a simple plot, using the `TimeSeries.plot` function: "
    ]
   },
   {
@@ -133,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_ts(ts_constant.interp_time(time=t))"
+    "ts_constant.interp_time(time=t).plot(marker='o')"
    ]
   },
   {
@@ -211,7 +196,7 @@
    "source": [
     "ts = ts_step.interp_time(t)\n",
     "print(ts)\n",
-    "plot_ts(ts)"
+    "ts.plot(marker='o')"
    ]
   },
   {
@@ -243,7 +228,7 @@
    "source": [
     "ts = ts_linear.interp_time(t)\n",
     "print(ts)\n",
-    "plot_ts(ts)"
+    "ts.plot(marker='o')"
    ]
   },
   {
@@ -262,7 +247,7 @@
    "source": [
     "ts = ts_linear.interp_time(t + pd.Timedelta(0.5, \"s\"))\n",
     "print(ts)\n",
-    "plot_ts(ts)"
+    "ts.plot(marker='o')"
    ]
   },
   {
@@ -292,7 +277,7 @@
     "\n",
     "ts = ts_expr.interp_time(t)\n",
     "print(ts)\n",
-    "plot_ts(ts)"
+    "ts.plot(marker='o')"
    ]
   },
   {
@@ -310,7 +295,7 @@
    "source": [
     "t2 = Q_(np.arange(101) * 100, \"ms\")\n",
     "ts = ts_expr.interp_time(t2)\n",
-    "plot_ts(ts)"
+    "ts.plot(marker='o')"
    ]
   },
   {
@@ -334,7 +319,7 @@
     "ts_sine = TimeSeries(data=expr)\n",
     "\n",
     "ts = ts_sine.interp_time(pd.timedelta_range(start=\"0s\", end=\"10s\", freq=\"100ms\"))\n",
-    "plot_ts(ts)"
+    "ts.plot(marker='o')"
    ]
   },
   {
@@ -378,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_ts(ts)"
+    "ts.plot(marker='o')"
    ]
   }
  ],
@@ -398,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
