--- a/tutorials/timeseries_01.ipynb
+++ b/tutorials/timeseries_01.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_constant.interp_time(time=t).plot(marker='o')"
+    "ts_constant.plot(time=t, marker='o')"
    ]
   },
   {
