Use plot function in measurement chain tutorial

--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -515,6 +515,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Remember, that the returned `TimeSeries` posseses a plot function that lets you create a plot of the time dependent data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_1.get_signal_data().plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the `Signal` class returned by the `get_signal` function offers a `plot` function too.\n",
+    "So you do not need to fetch the data from the Signal in order to plot it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_1.get_signal(\"Calibration\").plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This concludes this tutorial about the `MeasurementChain` class.\n",
     "We have learned different methods to create it, add transformations and measurement data to it.\n",
     "Additionally, we saw how to define our laboratory equipment using the `MeasurementEquipment` class and create new measurement chains from it. \n",
@@ -538,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
