move sine and lcs_coords_from_ts functions to welding module

--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -47,7 +47,10 @@
     "    get_groove,\n",
     "    util,\n",
     "    LinearHorizontalTraceSegment,\n",
-    ")"
+    "    welding,\n",
+    ")\n",
+    "\n",
+    "from weldx.welding.util import sine, lcs_coords_from_ts"
    ]
   },
   {
@@ -248,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_sine = util.sine(f=Q_(0.5 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0.75, 0]], \"mm\"))"
+    "ts_sine = sine(f=Q_(0.5 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0.75, 0]], \"mm\"))"
    ]
   },
   {
@@ -484,7 +487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_sine = util.sine(f=Q_(1 / 8 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0, 1]], \"mm\"))"
+    "ts_sine = sine(f=Q_(1 / 8 * 2 * np.pi, \"Hz\"), amp=Q_([[0, 0, 1]], \"mm\"))"
    ]
   },
   {
@@ -501,7 +504,7 @@
    "outputs": [],
    "source": [
     "t = pd.timedelta_range(start=\"0s\", end=\"8s\", freq=\"25ms\")\n",
-    "ts_sine_data = util.lcs_coords_from_ts(ts_sine, t)\n",
+    "ts_sine_data = lcs_coords_from_ts(ts_sine, t)\n",
     "tcp_sine2 = LocalCoordinateSystem(coordinates=ts_sine_data)"
    ]
   },
@@ -632,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
