--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -21,7 +21,8 @@
     "import weldx.measurement as msm\n",
     "import weldx.transformations as tf\n",
     "from weldx import Q_\n",
-    "from weldx import util"
+    "from weldx import util\n",
+    "from weldx.welding.util import sine"
    ]
   },
   {
@@ -57,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "I_ts = util.sine(f=Q_(10, \"1/s\"), amp=Q_(20, \"A\"), bias=Q_(300, \"A\"))\n",
+    "I_ts = sine(f=Q_(10, \"1/s\"), amp=Q_(20, \"A\"), bias=Q_(300, \"A\"))\n",
     "I = I_ts.interp_time(time)\n",
     "\n",
     "current_data = weldx.TimeSeries(data=I.data, time=time)\n",
@@ -70,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "U_ts = util.sine(f=Q_(10, \"1/s\"), amp=Q_(3, \"V\"), bias=Q_(40, \"V\"), phase=Q_(0.1, \"rad\"))\n",
+    "U_ts = sine(f=Q_(10, \"1/s\"), amp=Q_(3, \"V\"), bias=Q_(40, \"V\"), phase=Q_(0.1, \"rad\"))\n",
     "U = U_ts.interp_time(time)\n",
     "\n",
     "voltage_data = weldx.TimeSeries(data=U.data, time=time)\n",
