fix import and grammar

--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -15,13 +15,11 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import sympy\n",
     "\n",
     "import weldx\n",
     "import weldx.measurement as msm\n",
     "import weldx.transformations as tf\n",
     "from weldx import Q_\n",
-    "from weldx import util\n",
     "from weldx.welding.util import sine"
    ]
   },
@@ -40,7 +38,7 @@
     "## Generating the measurement data\n",
     "We start by creating some \"dummy\" datasets that represent the current and voltage measurements.\n",
     "In a real application, these would be the datasets that we would copy from our measurement equipment (e.g. downloaded form a HKS-WeldQAS, oscilloscope or similar systems).\n",
-    "The values in these dataset represent the actual physical current and voltage data in A and V."
+    "The values in this dataset represent the actual physical current and voltage data in A and V."
    ]
   },
   {
@@ -94,7 +92,7 @@
    "metadata": {},
    "source": [
     "## Equipment and Software\n",
-    "Next, let's define some of the equipment and software that is used throughout the measurement chain. \n",
+    "Next, let's define some equipment and software that is used throughout the measurement chain.\n",
     "We will use and add more information to these objects later.\n",
     "In out example, two types of hardware equipment are used:\n",
     "\n",
@@ -474,7 +472,7 @@
    "metadata": {},
    "source": [
     "## Writing to ASDF\n",
-    "Once we have define all object we can write them to a ASDF file. To make the file easier to read we place some elements earlier in the tree."
+    "Once we have defined all object we can write them to an ASDF file. To make the file easier to read we place some elements earlier in the tree."
    ]
   },
   {
