--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -531,7 +531,9 @@
    "outputs": [],
    "source": [
     "t_interp = pd.timedelta_range(\n",
-    "    start=tcp_wire.time[0].values, end=tcp_wire.time[-1].values, freq=\"20ms\"\n",
+    "    start=tcp_wire.time.as_pandas_index()[0], \n",
+    "    end=tcp_wire.time.as_pandas_index()[-1], \n",
+    "    freq=\"20ms\"\n",
     ")"
    ]
   },
@@ -635,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
