Partially undo notebook fixes

--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -836,8 +836,8 @@
     "\n",
     "# first timestep\n",
     "vs.plot_coordinate_systems([(lcs_ref, {\"color\":\"r\", \"label\":\"reference\"}),\n",
-    "                            (lcs_xr, {\"color\":\"g\", \"label\":str(lcs_xr.time.as_pandas_index()[0]), \"time_index\":0}),\n",
-    "                            (lcs_xr, {\"color\":\"b\", \"label\":str(lcs_xr.time.as_pandas_index()[1]), \"time_index\":1})],\n",
+    "                            (lcs_xr, {\"color\":\"g\", \"label\":str(lcs_xr.time[0]), \"time_index\":0}),\n",
+    "                            (lcs_xr, {\"color\":\"b\", \"label\":str(lcs_xr.time[1]), \"time_index\":1})],\n",
     "                           axes=ax_dsx,\n",
     "                           limits=(-3, 3))"
    ]
