--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -186,7 +186,7 @@
     "%YAML 1.1\n",
     "---\n",
     "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
-    "id: \"http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "id: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
     "tag: \"tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0\"\n",
     "\n",
     "title: |\n",
@@ -246,7 +246,7 @@
     "%YAML 1.1\n",
     "---\n",
     "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
-    "id: \"http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "id: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
     "tag: \"tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0\"\n",
     "\n",
     "title: |\n",
@@ -349,7 +349,7 @@
     "\n",
     "# mappings\n",
     "tags:\n",
-    "- uri: \"http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "- uri: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
     "  file: \"my_measurement_equipment_schema-1.0.0\"\n",
     "\"\"\""
    ]
@@ -392,7 +392,7 @@
     "If you are not sure about the exact URI just have a look into the original schema of the object.\n",
     "You can find all schemas [here](../standard.rst).\n",
     "In our example we want to replace the schema for the URI\n",
-    "`http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0`.\n",
+    "`asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0`.\n",
     "Additionally, each item of the YAML list needs a `file` property which specifies the relative file path of the new\n",
     "schema inside the `schemas` directory, omitting the file extension.\n",
     "So in our case we use `file: \"my_measurement_equipment_schema-1.0.0`\n",
