--- a/tutorials/custom_metadata.ipynb
+++ b/tutorials/custom_metadata.ipynb
@@ -79,7 +79,7 @@
     "As we can see, our custom metadata gets serialized into the ASDF tree:\n",
     "```yaml\n",
     "wx_metadata:\n",
-    "    calibration: !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-06-01T00:00:00'}\n",
+    "    calibration: !<asdf://weldx.bam.de/weldx/tags/time/timestamp-1.0.0> {value: '2020-06-01T00:00:00'}\n",
     "  wx_user:\n",
     "    notes: [wallmounted, The cable seems to be a bit loose.]\n",
     "```\n",
