--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -187,7 +187,7 @@
     "---\n",
     "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
     "id: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
-    "tag: \"tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "tag: \"asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.0.0\"\n",
     "\n",
     "title: |\n",
     "  A piece of measurement equipment.\n",
@@ -202,11 +202,11 @@
     "  sources:\n",
     "    type: array\n",
     "    items:\n",
-    "      tag: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
+    "      tag: \"asdf://weldx.bam.de/weldx/tags/measurement/source-1.0.0\"\n",
     "  transformations:\n",
     "    type: array\n",
     "    items:\n",
-    "      tag: \"tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0\"\n",
+    "      tag: \"asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.0.0\"\n",
     "\n",
     "propertyOrder: [name, sources, transformations]\n",
     "required: [name]\n",
@@ -247,7 +247,7 @@
     "---\n",
     "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
     "id: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
-    "tag: \"tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "tag: \"asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.0.0\"\n",
     "\n",
     "title: |\n",
     "  A piece of measurement equipment.\n",
