refactor asdf uri and tag syntax (#431)
* replace tag syntax

* try fix legacy tag_mapping

* add custom make_yaml_tag implementation

* use format tag for wx_shape instance testing

* fix custom tag building for groove types

* update to new uri syntax

* update time schema

* update doc

* add script to create initial manifest

* fix notebooks

* update CHANGELOG.md

--- a/tutorials/quality_standards.ipynb
+++ b/tutorials/quality_standards.ipynb
@@ -186,8 +186,8 @@
     "%YAML 1.1\n",
     "---\n",
     "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
-    "id: \"http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0\"\n",
-    "tag: \"tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "id: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
+    "tag: \"asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.0.0\"\n",
     "\n",
     "title: |\n",
     "  A piece of measurement equipment.\n",
@@ -202,11 +202,11 @@
     "  sources:\n",
     "    type: array\n",
     "    items:\n",
-    "      tag: \"tag:weldx.bam.de:weldx/measurement/source-1.0.0\"\n",
+    "      tag: \"asdf://weldx.bam.de/weldx/tags/measurement/source-1.0.0\"\n",
     "  transformations:\n",
     "    type: array\n",
     "    items:\n",
-    "      tag: \"tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0\"\n",
+    "      tag: \"asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.0.0\"\n",
     "\n",
     "propertyOrder: [name, sources, transformations]\n",
     "required: [name]\n",
@@ -246,8 +246,8 @@
     "%YAML 1.1\n",
     "---\n",
     "$schema: \"http://stsci.edu/schemas/yaml-schema/draft-01\"\n",
-    "id: \"http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0\"\n",
-    "tag: \"tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "id: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
+    "tag: \"asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.0.0\"\n",
     "\n",
     "title: |\n",
     "  A piece of measurement equipment.\n",
@@ -349,7 +349,7 @@
     "\n",
     "# mappings\n",
     "tags:\n",
-    "- uri: \"http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0\"\n",
+    "- uri: \"asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0\"\n",
     "  file: \"my_measurement_equipment_schema-1.0.0\"\n",
     "\"\"\""
    ]
@@ -392,7 +392,7 @@
     "If you are not sure about the exact URI just have a look into the original schema of the object.\n",
     "You can find all schemas [here](../standard.rst).\n",
     "In our example we want to replace the schema for the URI\n",
-    "`http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0`.\n",
+    "`asdf://weldx.bam.de/weldx/schemas/equipment/measurement_equipment-1.0.0`.\n",
     "Additionally, each item of the YAML list needs a `file` property which specifies the relative file path of the new\n",
     "schema inside the `schemas` directory, omitting the file extension.\n",
     "So in our case we use `file: \"my_measurement_equipment_schema-1.0.0`\n",
