--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.asdf.tags.weldx.core.mathematical_expression import MathematicalExpression\n",
+    "from weldx.tags.core.mathematical_expression import MathematicalExpression\n",
     "\n",
     "current_AD_func = MathematicalExpression(\n",
     "    expression=\"a * x + b\", \n",
