--- a/tutorials/GMAW_process.ipynb
+++ b/tutorials/GMAW_process.ipynb
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = weldx.WeldxFile(tree=tree)\n",
+    "file = weldx.WeldxFile(tree=tree, mode=\"rw\")\n",
     "file.show_asdf_header()"
    ]
   },
