--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -184,7 +184,7 @@
    "outputs": [],
    "source": [
     "tree = dict(test_v_groove=v_groove)\n",
-    "file = WeldxFile(tree=tree)"
+    "file = WeldxFile(tree=tree, mode=\"rw\")"
    ]
   },
   {
