--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -491,7 +491,7 @@
     "    \"data\": measurement_data,\n",
     "    \"measurements\": measurements,\n",
     "}\n",
-    "file = weldx.WeldxFile(tree=tree)"
+    "file = weldx.WeldxFile(tree=tree, mode=\"rw\")"
    ]
   },
   {
