--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -552,7 +552,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = WeldxFile(tree=tree)"
+    "file = WeldxFile(tree=tree, mode=\"rw\")"
    ]
   },
   {
