--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -531,8 +531,8 @@
    "outputs": [],
    "source": [
     "t_interp = pd.timedelta_range(\n",
-    "    start=tcp_wire.time[0], \n",
-    "    end=tcp_wire.time[-1], \n",
+    "    start=tcp_wire.time.index[0], \n",
+    "    end=tcp_wire.time.index[-1], \n",
     "    freq=\"20ms\"\n",
     ")"
    ]
